# Aleph

./: CMakeLists.txt
bindings/: Makefile  cmake_install.cmake
bindings/python/: Makefile  cmake_install.cmake
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  create_persistence_diagrams.cc  create_persistence_landscapes.cc  create_persistence_landscapes_2.cc  distance-matrix_from_diagrams.cc  mean-landscape_from_diagrams.cc  network_analysis_landscape.cc  persistence_landscape_from_input.cc
include/: Makefile  cmake_install.cmake
include/aleph/persistenceDiagrams/: PersistenceLandscape.hh
include/aleph/utilities/: ContainerOperators.hh
src/: Makefile  cmake_install.cmake
src/gui/: Makefile  cmake_install.cmake
src/tools/: CMakeLists.txt  Makefile  cmake_install.cmake  power_law_graphs.cc  reddit_graphs.cc  topological_distance.cc
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_persistence_landscape.cc
